# Final-Year-Project

./: README.md
ESP_IDF代码/: README.md  partitions.csv  sdkconfig  sdkconfig.old
ESP_IDF代码/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.h
ESP_IDF代码/main/bsp/: CMakeLists.txt  bsp_gpio.c  bsp_gpio.h  bsp_key.c  bsp_key.h
ESP_IDF代码/main/components/DHT11/: CMakeLists.txt  DHT11_luo.c  DHT11_luo.h
ESP_IDF代码/main/components/MAX30102/: CMakeLists.txt  max30102_luo.c  max30102_luo.h
ESP_IDF代码/main/components/MLX90614/: CMakeLists.txt  MLX90614_API.h  MLX90614_SMBus_Driver.c
ESP_IDF代码/main/lvgl_file/: CMakeLists.txt  ui.c  ui.h
ESP_IDF代码/main/lvgl_file/images/: ui_img_pattern_png.c
ESP_IDF代码/main/lvgl_file/screens/: ui_Screen1.c  ui_Screen2.c
ESP_IDF代码/main/user_task/: CMakeLists.txt  lvgl_task.c  lvgl_task.h
逻辑回归模型训练及部署/: readme.md  训练  转换为tfl格式_计算阈值
逻辑回归模型训练及部署/android端部署/app/: build.gradle.kts
逻辑回归模型训练及部署/android端部署/app/src/main/: AndroidManifest.xml
逻辑回归模型训练及部署/android端部署/app/src/main/assets/: lr_model.tflite
逻辑回归模型训练及部署/android端部署/app/src/main/java/com/example/myapplication/: MainActivity.kt
逻辑回归模型训练及部署/android端部署/app/src/main/res/layout/: activity_main.xml
逻辑回归模型训练及部署/android端部署/gradle/wrapper/: gradle-wrapper.properties
