idf_component_register(SRCS "main.c"
                        SRCS "bsp/bsp_gpio.c"
                        SRCS "bsp/bsp_key.c"
                        SRCS "lvgl_file/screens/ui_Screen1.c"
                        SRCS "lvgl_file/screens/ui_Screen2.c"
                        SRCS "lvgl_file/images/ui_img_pattern_png.c"                        
                        SRCS "lvgl_file/ui.c"
                        SRCS "lvgl_file/ui_helpers.c"
                        SRCS "user_task/lvgl_task.c"
                        SRCS "components/MAX30102/max30102_luo.c"
                        SRCS "components/MLX90614/MLX90614_API.c"
                        SRCS "components/MLX90614/MLX90614_SMBus_Driver.c"
                        SRCS "components/DHT11/DHT11_luo.c"
                        SRCS "../managed_components/espressif__esp_lcd_st7796s/esp_lcd_st7796s.c"
                        INCLUDE_DIRS "../managed_components/espressif__esp_lcd_st7796s/include"
                        INCLUDE_DIRS "./bsp"
                        INCLUDE_DIRS "./lvgl_file"
                        INCLUDE_DIRS "./lvgl_file/fonts"
                        INCLUDE_DIRS "./lvgl_file/screens"
                        INCLUDE_DIRS "./user_task"
                        INCLUDE_DIRS "./components/MAX30102"
                        INCLUDE_DIRS "./components/MLX90614"
                        INCLUDE_DIRS "./components/DHT11"
                        INCLUDE_DIRS "."
                        # REQUIRES "lvgl_file"
                        )
